tdf#156061: don't hide DB fields when not in mail merge

Original implementation (commit db04be037b611e296ef9f2542322c52ed82d7a2b
tdf#35798: Hide empty Database fields' paragraphs (+ compat option),
2018-05-20) made empty DB fields serve as "hidden paragraph" field,
when the field text is empty. The feature is created for mail merge,
where the generated documents adapt to varying set of data in each
record.

But that broke the case where documents having DB field are used in
non-mailmerge context, like viewing/printing such documents. Users
expect such documents to show the lines.

This patch changes the behavior, so that empty DB field only hides
paragraphs when mail merge is being performed. When the resulting
document converts DB fields to static text, the hidden paragraphs
get removed. But if the generated documents still have DB fields,
then the paragraphs in it will not be hidden, when opened later.
This matches user expectations, and behavior of other apps, better.
This behavior change required to change respective unit tests in
sw/qa/extras/mailmerge/mailmerge.cxx from *_FILE_* to *_SHELL_*:
the latter creates a static-text output, while the former produces
files with fields. (IMO, that is a bug.)

Change-Id: Id796ad8fe413372377ce22d8da4931110718c8c2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187150
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187167